crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__variables__old_global_variable_2.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/variables.rs
assertion_line: 18
expression: "goto_definition(r#\"\n%! main.sp\nnew _:foo = 0, Float:bar, bool:baz = true, String:qux = 'c';\n                                                   |\n                                                   ^             \n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 0,
        "character": 50
      },
      "end": {
        "line": 0,
        "character": 53
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 43
      },
      "end": {
        "line": 0,
        "character": 59
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 50
      },
      "end": {
        "line": 0,
        "character": 53
      }
    }
  }
]
